--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/8e53129ab2.js" crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
